# Lennits_Cryptolyzer

./: .gitignore  LENNITS_CRYPTOLYZER3.7z  LENNITS_CRYPTOLYZER5.7z  Lennits_Cryptolyzer2.7z  Lennits_Cryptolyzer7.7z  android 1.7z  rish_shizuku.dex
.github/workflows/: hadolint.yml  kubesec.yml  njsscan.yml  rust-clippy.yml  veracode.yml
apps/app/frontend/: .env.example  manifest.json  package.json
apps/app/public/src/main/cpp/: CMakeLists.txt
apps/app/rust_core/: Cargo.toml
apps/app/rust_core/src/: hybrid_sign.rs  lib.rs  mesh_sync.rs  npu_accelerator.rs  zk_oracle.rs
archives/Lennits_Cryptolyzer Project Archives and all code files/: .env.example  ARCHITECTURE.txt  AndroidManifest (2).xml  AndroidManifest (4).xml  AndroidManifest (5).xml  AndroidManifest (8).xml  AppConfig (1).kt  AppModule (1).kt  BiometricGatekeeper (1).kt  BottomNavBar (1).kt  BrochureWebViewScreen.kt  CMakeLists (3).txt  Cargo (1).toml  CryptoLyzer advanced code )  CryptolyzerApp.kt  DEPLOYMENT_GUIDE.md  DashboardScreen (1).kt  DashboardScreen (3).kt  DashboardViewModel (4).kt  DashboardViewModel.kt  DeepSeek - Into the Unknown (1)  Destinations (1).kt  Dockerfile  Dockerfile (3)  GuardianService.kt  KeystoreManager (1).kt  LENNITS_CRYPTOLYZER.gitignore  Lennit_Genesis_2026 (1)  MainActivity (1) (1).kt  MainActivity (2).kt  Models (2).kt  NotificationsScreen (3).kt  NotificationsViewModel (1).kt  NotificationsViewModel (4).kt  README.md  README.txt  Repositories (2).kt  SafeControlViewModel (1).kt  SafeControlViewModel (2).kt  SafeScreen (1).kt  (+94 more)
core/capital-system/bridges/: across.py  (+2 more)
(+148 files in other folders)
